Added styling to web page
Added padding to body content, customized links

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
 
             <!-- Headings and paragraph content -->
             <div class="header-content">
-                <h2 class="heading">SHARE YOUR HOLIDAY DREAM</h2>
+                <h2 class="heading">SHARE YOUR <br>HOLIDAY DREAM</h2>
                 <p class="text">And find the perfect partner to fulfill it</p>
-                <button class="button">Find your holiday partner</button>
+                <a href="" class="holiday-link">Find your holiday partner</a>
             </div>
         </div>
 
-        <div class="main-content-container">
+        <div class="main-container">
 
             <h2 class="partner-heading">Meet a partner for your best holiday</h2>
 
@@ -60,8 +60,9 @@
                     <p class="p-para">Star Wars fanatic. I have a persistent enthusiasm to create new things.</p>
                 </div>
 
-                <button class="partner-button">See other partners</button>
             </div>
+
+            <a href="" class="partner-link">See other partners</a>
 
             <div class="holiday-container">
                 <h2 class="holiday-heading">Discover holiday activity ideas</h2>
@@ -77,7 +78,7 @@
                 </div>
             </div>
 
-            <hr>
+            <hr class="line">
 
             <div class="footer-container">
                 
