Worked on styling for header section
Added padding to headings, paragraphs and nav bar to neaten up the header section.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <!-- Header contents below -->
         <div class="header">
 
+            <img src="img/logo.svg" alt="logo" class="logo" height="18px">
+
             <!-- Navigation bar links below -->
             <div class="nav-content">
                 <a href="" class="nav-list">Activities</a>
@@ -25,7 +27,7 @@
             <!-- Headings and paragraph content -->
             <div class="header-content">
                 <h2 class="heading">SHARE YOUR <br>HOLIDAY DREAM</h2>
-                <p class="text">And find the perfect partner to fulfill it</p>
+                <p class="heading-text">And find the perfect partner to fulfill it</p>
                 <a href="" class="holiday-link">Find your holiday partner</a>
             </div>
         </div>
@@ -78,7 +80,6 @@
                 </div>
             </div>
 
-            <hr class="line">
 
             <div class="footer-container">
                 
