Updated styling of partner section
Added padding to align the images correctly and added comments.

--- a/index.html
+++ b/index.html
@@ -33,35 +33,40 @@
         </div>
 
         <div class="main-container">
-
+            
             <h2 class="partner-heading">Meet a partner for your best holiday</h2>
+
+            <!-- Container for the partner section -->
 
             <div class="partner-container">
 
                 <div class="partner-content">
                     <img src="img/partner1.jpg" alt="Bradley">
+                    <img src="img/music.svg" alt="">
                     <h2 class="p-heading">Bradley Hunter</h2>
                     <p class="p-para">Based in Chicago. I love playing tennis and loud music.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner2.jpg" alt="Marie">
+                    <img src="img/brush.svg" alt="">
                     <h2 class="p-heading">Marie Bennett</h2>
                     <p class="p-para">Currently living in Colorado. Lover of art, languages and travelling.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner3.jpg" alt="Diana">
+                    <img src="img/camera.svg" alt="">
                     <h2 class="p-heading">Diana Wells</h2>
                     <p class="p-para">Living in Athens, Greece. I love black and white classics, chillout music and green tea.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner4.jpg" alt="Christopher">
+                    <img src="img/airplane.svg" alt="">
                     <h2 class="p-heading">Christopher Pierce</h2>
                     <p class="p-para">Star Wars fanatic. I have a persistent enthusiasm to create new things.</p>
                 </div>
-
             </div>
 
             <a href="" class="partner-link">See other partners</a>
