Corrected errors on partner section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,9 @@
                 </div>
             </div>
 
-            <a href="" class="partner-link">See other partners</a>
+            <div class="link-2">
+                <a href="" class="partner-link">See other partners</a>
+            </div>
 
             <div class="holiday-container">
                 <h2 class="holiday-heading">Discover holiday activity ideas</h2>
