Updated styling of holiday grid.
Corrected the styling of the holiday section and updated HTML structure of the grids to accommodate the letters in the center of images.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Dreamshare</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+        <link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto" rel="stylesheet">
         <script src="main.js"></script>
     </head>
     <body>
@@ -77,13 +78,29 @@
                 <h2 class="holiday-heading">Discover holiday activity ideas</h2>
 
                 <div class="holiday-grid">
-                    <img class="h-1" src="img/block1Sports.jpg" alt="Sports">
-                    <img class="h-2" src="img/block2Wellness.jpg" alt="Wellness">
-                    <img class="h-3" src="img/block3Expeditions.jpg" alt="Expeditions">
-                    <img class="h-4" src="img/block4Games.jpg" alt="Games">
-                    <img class="h-5" src="img/block5Culture.jpg" alt="Culture">
-                    <img class="h-6" src="img/block6Beauty.jpg" alt="Beauty">
-                    <img class="h-7" src="img/block7Travelling.jpg" alt="Travelling">
+                
+                    <div class="block-1">
+                        <div>Sports</div>
+                    </div>
+                    <div class="block-2">
+                        <div>Wellnesss and Health</div>
+                    </div>
+                    <div class="block-3">
+                        <div>Expeditions</div>
+                    </div>
+                    <div class="block-4">
+                        <div>Games</div>
+                    </div>
+                    <div class="block-5">
+                        <div>Culture and Education</div>
+                    </div>
+                    <div class="block-6">
+                        <div>Beauty and Relaxation</div>
+                    </div>
+                    <div class="block-7">
+                        <div>Travelling</div>
+                    </div>
+                    
                 </div>
             </div>
 
