Worked on footer section
Aligned all the list tags, changed the fonts and the color.

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         <li>Expedition</li>
                         <li>Games</li>
                         <li>Cultural and Education</li>
-                        <li>View all</li>
+                        <li class="view">View all</li>
                     </ul>
                     
                 </div>
