--- a/index.html
+++ b/index.html
@@ -43,28 +43,28 @@
 
                 <div class="partner-content">
                     <img src="img/partner1.jpg" alt="Bradley">
-                    <img src="img/music.svg" alt="">
+                    <img class="music" src="img/music.svg" alt="">
                     <h2 class="p-heading">Bradley Hunter</h2>
                     <p class="p-para">Based in Chicago. I love playing tennis and loud music.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner2.jpg" alt="Marie">
-                    <img src="img/brush.svg" alt="">
+                    <img class="brush" src="img/brush.svg" alt="">
                     <h2 class="p-heading">Marie Bennett</h2>
                     <p class="p-para">Currently living in Colorado. Lover of art, languages and travelling.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner3.jpg" alt="Diana">
-                    <img src="img/camera.svg" alt="">
+                    <img class="camera" src="img/camera.svg" alt="">
                     <h2 class="p-heading">Diana Wells</h2>
                     <p class="p-para">Living in Athens, Greece. I love black and white classics, chillout music and green tea.</p>
                 </div>
 
                 <div class="partner-content">
                     <img src="img/partner4.jpg" alt="Christopher">
-                    <img src="img/airplane.svg" alt="">
+                    <img class="airplane" src="img/airplane.svg" alt="">
                     <h2 class="p-heading">Christopher Pierce</h2>
                     <p class="p-para">Star Wars fanatic. I have a persistent enthusiasm to create new things.</p>
                 </div>
