Made a few touch ups to the styling.
Made the activity blocks links, improved general layout and color of activity section and added comments to different sections.

--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
             <div class="partner-container">
 
                 <div class="partner-content">
-                    <img src="img/partner1.jpg" alt="Bradley">
+                    <img class="lead-img" src="img/partner1.jpg" alt="Bradley">
                     <img class="music" src="img/music.svg" alt="">
                     <h2 class="p-heading">Bradley Hunter</h2>
                     <p class="p-para">Based in Chicago. I love playing tennis and loud music.</p>
                 </div>
 
                 <div class="partner-content">
-                    <img src="img/partner2.jpg" alt="Marie">
+                    <img class="lead-img" src="img/partner2.jpg" alt="Marie">
                     <img class="brush" src="img/brush.svg" alt="">
                     <h2 class="p-heading">Marie Bennett</h2>
                     <p class="p-para">Currently living in Colorado. Lover of art, languages and travelling.</p>
                 </div>
 
                 <div class="partner-content">
-                    <img src="img/partner3.jpg" alt="Diana">
+                    <img class="lead-img" src="img/partner3.jpg" alt="Diana">
                     <img class="camera" src="img/camera.svg" alt="">
                     <h2 class="p-heading">Diana Wells</h2>
                     <p class="p-para">Living in Athens, Greece. I love black and white classics, chillout music and green tea.</p>
                 </div>
 
                 <div class="partner-content">
-                    <img src="img/partner4.jpg" alt="Christopher">
+                    <img class="lead-img" src="img/partner4.jpg" alt="Christopher">
                     <img class="airplane" src="img/airplane.svg" alt="">
                     <h2 class="p-heading">Christopher Pierce</h2>
                     <p class="p-para">Star Wars fanatic. I have a persistent enthusiasm to create new things.</p>
@@ -80,25 +80,32 @@
                 <div class="holiday-grid">
                 
                     <div class="block-1">
-                        <div>Sports</div>
+                        <div><a href="" class="activity-1">Sports</a>
+                        </div>
                     </div>
                     <div class="block-2">
-                        <div>Wellnesss and Health</div>
+                        <div><a href="" class="activity">Wellnesss and Health</a>
+                        </div>
                     </div>
                     <div class="block-3">
-                        <div>Expeditions</div>
+                        <div><a href="" class="activity">Expeditions</a>
+                        </div>
                     </div>
                     <div class="block-4">
-                        <div>Games</div>
+                        <div><a href="" class="activity">Games</a>
+                        </div>
                     </div>
                     <div class="block-5">
-                        <div>Culture and Education</div>
+                        <div><a href="" class="activity">Culture and Education</a>
+                        </div>
                     </div>
                     <div class="block-6">
-                        <div>Beauty and Relaxation</div>
+                        <div><a href="" class="activity">Beauty and Relaxation</a>
+                        </div>
                     </div>
                     <div class="block-7">
-                        <div>Travelling</div>
+                        <div><a href="" class="activity">Travelling</a>
+                        </div>
                     </div>
                     
                 </div>
