--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <a href="" class="partner-link">See other partners</a>
             </div>
 
+            <!-- Holiday container with grids -->
             <div class="holiday-container">
                 <h2 class="holiday-heading">Discover holiday activity ideas</h2>
 
@@ -111,7 +112,7 @@
                 </div>
             </div>
 
-
+            <!-- Footer starts here -->
             <div class="footer-container">
                 
                 <div class="f-1">
